feat: Bukkit/Paper plugin runtime — real plugins boot end-to-end
Goal: load LoginSecurity, LuckPerms, SimpleLogin, WorldEdit (and similarly
shaped real-world plugins) through the full onEnable lifecycle without
NoClassDefFoundError, NullPointerException, or NoSuchMethodError.

Runtime classpath
- Bundle Paper-equivalent transitives into rd-server fat jar: log4j-api/
  core/iostreams/slf4j2-impl, slf4j-api, guava + failureaccess, snakeyaml,
  bungeecord-chat, commons-io/lang3/lang/codec, fastutil, joml, sqlite-jdbc,
  mysql-connector-j, brigadier, ASM 9.9.1.
- Drop slf4j-simple in favour of log4j-slf4j2-impl so SLF4J calls funnel
  through log4j (single binding, no double-registration warning).

Boot wiring
- ModSystem.boot installs BukkitBridge reflectively (was test-only) so
  Bukkit.getServer() / Bukkit.getPluginManager() return live objects in
  production. Symmetric uninstall on stop keeps tests clean.
- BukkitPluginLoader / PaperPluginLoader populate JavaPlugin.init fields
  (file, classLoader, dataFolder, description) so reflective lookups like
  WorldEdit's getFile() succeed.

Legacy bytecode remap
- LegacyGoogleRemapper rewrites pre-1.7.6 plugin references
  (net.minecraft.util.com.google.{common,gson}.* → com.google.{common,gson}.*)
  via ASM ClassRemapper inside ModClassLoader.findClass, so we don't have
  to ship duplicate Guava/Gson copies under the legacy package name.

Real Bukkit API stubs (hand-tuned, @rdforward:preserve)
- Permission: real children map, defaultValue, description; 9 ctors
  funnel through 4-param ctor.
- PermissibleBase: attachments LinkedList field name pinned for LuckPerms
  reflection.
- PermissionDefault.getValue(boolean op): real TRUE/FALSE/OP/NOT_OP
  semantics; getByName parses common aliases.
- ChatColor: real enum with section-prefix toString, getByChar,
  stripColor, translateAlternateColorCodes, getLastColors.
- Vector: x/y/z fields, getX/Y/Z, getBlockX/Y/Z, equals (1e-6 epsilon),
  hashCode, clone, toString.
- Location.to